# exocore

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  Discovery.swift  Dockerfile.cache  Exocore.podspec  Node.swift  README.md  azure-pipelines.yml  exocore-v0.1.0.tgz  package-lock.json  package.json
.github/workflows/: build-release.yml  old-version-build.yaml  publish-release.yml  push-tester.yml  release.yaml  version-build.yaml
3rd/if-watch/: Cargo.toml
apps/example/: Cargo.toml
apps/example/src/: lib.rs
apps/host/: Cargo.toml
apps/host/fixtures/: example.wasm
apps/host/src/: error.rs  lib.rs
apps/macro/: Cargo.toml
apps/macro/src/: lib.rs
apps/macros/: Cargo.toml
apps/macros/src/: lib.rs
apps/runtime/: Cargo.toml  hello.wasm
apps/runtime/fixtures/: example.wasm
apps/runtime/src/: apps.rs  lib.rs  main.rs  runtime.rs
apps/sdk/: Cargo.toml
apps/sdk/macro/: Cargo.toml
apps/sdk/macro/src/: lib.rs
apps/sdk/src/: app.rs  binding.rs  client.rs  executor.rs  lib.rs  log.rs  logging.rs  store.rs  time.rs
chain/: Cargo.toml
chain/src/: block.rs  data.rs  operation.rs  tests_utils.rs
chain/src/chain/: data.rs  error.rs  mod.rs
chain/src/engine/: error.rs  handle.rs  mod.rs  sync_context.rs  testing.rs
chain/src/pending/: memory.rs
chain/tests/: engine.rs
cli/: Cargo.toml
cli/src/: cell.rs  server.rs
clients/android/: Cargo.toml  build.sh  build_openssl.sh
clients/c/: Cargo.toml
clients/c/src/: client.rs  discovery.rs  lib.rs  node.rs  utils.rs
clients/ios/: Cargo.toml  README.md  cbindgen.toml  exocore.h
clients/ios/src/: lib.rs
clients/ios/swift/: ExocoreClient.swift
clients/ios/tools/: build.sh
clients/wasm/: Cargo.toml  README.md
clients/wasm/src/: client.rs  js.rs  lib.rs  mutation.rs  query.rs  ws.rs
clients/web/: Cargo.toml  README.md
clients/web/src/: client.rs  disco.rs  discovery.rs  lib.rs  node.rs  watched_query.rs
clients/web/ts/: cell.ts  discovery.ts  index.ts  node.ts  store.ts  wasm.ts
common/: Cargo.toml  build.rs
common/benches/: capnp_msg.rs
common/proto/: common.capnp  data_chain.capnp  data_transport.capnp  index_domain.capnp  index_transport.capnp
common/src/: cell.rs  lib.rs  node.rs  range.rs  tests_utils.rs  time.rs  utils.rs
common/src/crypto/: hash.rs
common/src/framing/: capnp.rs  compound.rs  mod.rs  multihash.rs  padded.rs  sized.rs
common/src/protos/: common_capnp.rs  data_chain_capnp.rs  data_transport_capnp.rs  index_transport_capnp.rs  mod.rs
common/src/security/: signature.rs
common/src/serialization/: framed.rs
common/src/utils/: futures.rs  mod.rs
core/: Cargo.toml  build.rs
core/src/: build.rs  lib.rs  logging.rs  tests_utils.rs
core/src/cell/: app.rs  cell.rs  cell_apps.rs  cell_nodes.rs  config.rs  error.rs  mod.rs  node.rs
core/src/crypto/: auth_token.rs  keys.rs
core/src/dir/: mod.rs  os.rs  ram.rs  scoped.rs  web.rs
core/src/framing/: capnp.rs  compound.rs  mod.rs  multihash.rs  padded.rs  sized.rs
core/src/fs/: mod.rs  os.rs  ram.rs  scoped.rs  web.rs
core/src/futures/: owned_spawn.rs  spawn_tokio.rs
core/src/protos/: base64.rs  error.rs  reflect.rs  registry.rs
core/src/sec/: auth_token.rs  hash.rs
core/src/time/: clock.rs  mod.rs
core/src/utils/: handle_set.rs
data/: Cargo.toml  replication.md
data/src/: block.rs  engine.rs  lib.rs  operation.rs  tests_utils.rs
data/src/chain/: directory.rs  mod.rs
data/src/engine/: chain_sync.rs  commit_manager.rs  handle.rs  mod.rs  pending_sync.rs  pending_syncer.rs  request_tracker.rs  testing.rs
data/src/pending/: memory.rs  mod.rs
data/src/transport/: mock.rs  mod.rs
data/tests/: engine.rs
disco/: Cargo.toml
disco/src/: main.rs
disco/src/server/: mod.rs
discovery/: Cargo.toml
discovery/src/: client.rs  lib.rs  payload.rs
discovery/src/server/: config.rs  mod.rs  store.rs
discovery/tests/: discovery.rs
examples/: config.yaml  node.yaml
examples/ios/: Podfile
examples/ios/ExamplesIos/: DiscoveryView.swift  ListView.swift
examples/ios/ExamplesIos.xcodeproj/: project.pbxproj
examples/web/: .babelrc  README.md  package-lock.json  package.json  playwright.config.ts  webpack.config.js
examples/web/js/: index.js  list.js
examples/web/src/: index.tsx  list.tsx
examples/web/tests/: e2e.spec.ts  example.spec.ts
exo/: Cargo.toml
exo/src/: app.rs  cell.rs  config.rs  daemon.rs  disco.rs  keys.rs  main.rs  node.rs  options.rs  sec.rs  server.rs  term.rs
index/: Cargo.toml
index/src/: entity.rs  entity_old.rs  error.rs  errors.rs  index.rs  lib.rs  mutation.rs  queries.rs  query.rs  results.rs  store.rs
index/src/domain/: entity.rs  mod.rs  schema.rs  serialization.rs
index/src/entities/: entity.rs  schema.rs  serialization.rs
index/src/index/: entities.rs  traits.rs
index/src/local/: entities_index.rs  store.rs  test_store.rs  traits_index.rs
index/src/remote/: client.rs  tests.rs
index/src/schema/: entity.rs  json.rs  mod.rs  schema.rs
index/src/store/: mod.rs  remote.rs
protos/: Cargo.toml  build.rs
protos/exocore/core/: config.proto
protos/exocore/index/: query.proto
protos/exocore/transport/: enveloppe.proto  http.proto
protos/src/: lib.rs  reflect.rs  registry.rs  stepan.rs
schema/: Cargo.toml
schema/src/: entity.rs  schema.rs
store/: Cargo.toml
store/src/: client.rs  error.rs  lib.rs  mutation.rs  ordering.rs  query.rs  store.rs
store/src/local/: config.rs  mod.rs  mutation_tracker.rs  store.rs  test_store.rs
store/src/remote/: client.rs  mod.rs  tests.rs
tools/: bump_version.sh  coverage.sh  generate_protos.sh
transport/: Cargo.toml
transport/src/: either.rs  errors.rs  lib.rs  messages.rs  mock.rs  testing.rs  transport.rs
transport/src/http/: config.rs  handles.rs  mod.rs  requests.rs  server.rs  tests.rs
transport/src/lp2p/: behaviour.rs  mod.rs
transport/src/p2p/: behaviour.rs  bytes_channel.rs  failed.md  handles.rs  mod.rs  protocol.rs  success.md  tests.rs  transport.rs
utils/: check.sh  clippy.sh  copy_proto.sh  coverage.sh  coverage_grcov.sh  generate_protos.sh
(+71 files in other folders)
