[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
categories = ["database-implementations", "command-line-interface", "wasm", "web-programming"]
description = "Distributed applications framework"
edition = "2018"
keywords = ["networking", "mobile", "webassembly", "storage", "database"]
license = "Apache-2.0"
name = "exocore"
repository = "https://github.com/appaquet/exocore"
version = "0.1.3"

[features]
default = [
  "core-runtime",
  "core-logger",
  "transport-p2p",
  "transport-http-server",
  "store-local",
  "chain-engine",
  "chain-directory-chain",
  "chain-memory-pending",
]
logger = ["core-logger"]
tests-utils = ["exocore-core/tests-utils", "exocore-transport/tests-utils", "exocore-store/tests-utils"]
client = ["core-runtime", "transport-p2p"]
web = ["transport-p2p-web"]

chain-directory-chain = ["exocore-chain/directory-chain"]
chain-engine = ["exocore-chain/engine"]
chain-memory-pending = ["exocore-chain/memory-pending"]
core-logger = ["exocore-core/logger"]
core-runtime = ["exocore-core/runtime"]
discovery-server = ["exocore-discovery/server"]
store-local = ["exocore-store/local"]
transport-http-server = ["exocore-transport/http-server"]
transport-p2p = ["exocore-transport/p2p-full"]
transport-p2p-web = ["exocore-transport/p2p-web"]

[dependencies]
exocore-chain = {version = "0.1.3", path = "./chain", default-features = false}
exocore-core = {version = "0.1.3", path = "./core", default-features = false}
exocore-discovery = {version = "0.1.3", path = "./discovery", default-features = false}
exocore-protos = {version = "0.1.3", path = "./protos", default-features = false}
exocore-store = {version = "0.1.3", path = "./store", default-features = false}
exocore-transport = {version = "0.1.3", path = "./transport", default-features = false}

[dev-dependencies]
exocore-core = {version = "0.1.3", path = "./core", features = ["tests-utils"]}

[workspace]
exclude = [
  "3rd",
]
members = [
  "core",
  "protos",
  "transport",
  "store",
  "chain",
  "apps/runtime",
  "apps/macro",
  "apps/sdk",
  "apps/example",
  "discovery",
  "exo",
  "clients/web",
  "clients/android",
  "clients/c",
]

# [profile.release]
# lto = "thin"
# codegen-units = 1
