[package]
name = "exocore-disco"
version = "0.1.0"
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
edition = "2018"

[features]
default = ["server"]
server = ["hyper"]

[dependencies]
log = "0.4"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
pin-project = "1.0"
byteorder = "1.3"
hyper = { version = "0.13", optional = true }
tokio = { version = "0.2" }
rand = "0.7"
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
simple_logger = "1.11"