[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
edition = "2018"
name = "exocore-discovery"
version = "0.1.0"

[features]
default = ["server"]
server = ["hyper", "tokio"]

[dependencies]
anyhow = "1.0"
base64 = "0.13"
chrono = "0.4"
futures = "0.3"
hyper = {version = "0.13", optional = true}
log = "0.4"
rand = "0.7"
reqwest = {version = "0.10", default-features = false, features = ["json", "rustls-tls"]}
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "0.2", default-features = false, features = ["macros", "time"], optional = true }

[[test]]
name = "discovery"
required-features = ["server"]
