[package]
name = "exocore-apps-example"
description = "Distributed applications framework"
version = "0.1.3"
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
edition = "2018"
keywords = ["networking", "mobile", "webassembly", "storage", "database"]
categories = ["database-implementations", "command-line-interface", "wasm", "web-programming"]
repository = "https://github.com/appaquet/exocore"
license = "Apache-2.0"

[lib]
crate-type = ['cdylib']

[dependencies]
exocore-apps-sdk = { version = "0.1.3", path = "../sdk" }
exocore-store = { version = "0.1.3", path = "../../store", default-features = false }
log = "0.4"
futures = "0.3"
