[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
categories = ["database-implementations", "command-line-interface", "wasm", "web-programming"]
description = "Distributed applications framework"
edition = "2018"
keywords = ["networking", "mobile", "webassembly", "storage", "database"]
license = "Apache-2.0"
name = "exocore-apps-example"
repository = "https://github.com/appaquet/exocore"
version = "0.1.4-pre0"

[lib]
crate-type = ['cdylib']

[dependencies]
exocore = {version = "0.1.4-pre0", path = "../..", default-features = false, features = ["apps-sdk"]}
futures = "0.3"
log = "0.4"
