[package]
name = "exocore-apps-sdk"
description = "Distributed applications framework"
version = "0.1.3"
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
edition = "2018"
keywords = ["networking", "mobile", "webassembly", "storage", "database"]
categories = ["database-implementations", "command-line-interface", "wasm", "web-programming"]
repository = "https://github.com/appaquet/exocore"
license = "Apache-2.0"

[lib]
crate-type = ['cdylib']

[features]
default = []

[dependencies]
exocore-core = { version = "0.1.3", path = "../../core", default-features = false  }
log = "0.4"
thiserror = "1.0"
anyhow = "1.0"
# wasm-bindgen = "0.2"