[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
categories = ["database-implementations", "command-line-interface", "wasm", "web-programming"]
description = "Distributed applications framework"
edition = "2018"
keywords = ["networking", "mobile", "webassembly", "storage", "database"]
license = "Apache-2.0"
name = "exocore-apps-sdk"
repository = "https://github.com/appaquet/exocore"
version = "0.1.3"

[dependencies]
anyhow = "1.0"
exocore-apps-sdk-macro = {version = "0.1.3", path = "./macro"}
exocore-protos = {version = "0.1.3", path = "../../protos"}
futures = "0.3"
log = "0.4"
quote = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
